# seminarska_flappy

./: .gitignore  CMakeLists.txt  README.md
src/: Constants.cpp  Constants.hpp  GameEngine.cpp  GameEngine.hpp  main.cpp
src/components/: CInput.hpp  CRectangle.cpp  CRectangle.hpp  CTransform.hpp
src/managers/: AudioManager.cpp  AudioManager.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  InputManager.cpp  InputManager.hpp  SceneManager.cpp  SceneManager.hpp  TextureManager.cpp  TextureManager.hpp
src/scenes/: Constants.cpp  Constants.hpp  GameOverScene.cpp  GameOverScene.hpp  GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  PreGameScene.cpp  PreGameScene.hpp  Scene.hpp
